Shortening the applications sections

--- a/Talk7/library.bib
+++ b/Talk7/library.bib
@@ -1,4 +1,27 @@
 % Encoding: UTF-8
+@misc{FollowMyVote,
+author = {{Follow My Vote}, Inc.},
+mendeley-groups = {ComSys Seminar},
+title = {{The Online Voting Platform of The Future - Follow My Vote}},
+url = {https://followmyvote.com/},
+urldate = {2019-04-15}
+}
+
+@misc{BlockchainTechnologiesCorporation,
+author = {{Blockchain Technologies Corporation}},
+mendeley-groups = {ComSys Seminar},
+title = {{VoteWatcher - The World's Most Transparent Voting Machine}},
+url = {http://votewatcher.com/{\#}},
+urldate = {2019-04-15}
+}
+
+@article{Kirby2016,
+author = {Kirby, Kevin and Masi, Anthony and Maymi, Fernando},
+pages = {14},
+publisher = {The Economist}
+title = {{Votebook: A proposal for a blockchain-based electronic voting system}},
+year = {2016}
+}
 @misc{EuropeanCommission2017,
 author = {{European Commission}},
 mendeley-groups = {ComSys Seminar},
