Shortening, abstract and grammar corrections

--- a/Talk7/Seminar-Arbeit.tex
+++ b/Talk7/Seminar-Arbeit.tex
@@ -4,9 +4,8 @@
 	in the Context of Cybersecurity}{}
 \chaptauthors{Lenz, Pascal, Roland, Silas}
 
-% TODO
-\Kurzfassung{This is the abstract.
-	It fits pretty much on one page and is definitely not longer.}
+\Kurzfassung{
+The ability of the blockchain technology to handle tasks in a decentralized manner and its property to leave an audit trail of all its history makes it a perfect match when addressing cyber security related issues. Wether it directly mitigates them or it is used to create more secure applications, the blockchain has a lot to offer. This paper starts with a brief introduction to blockchains in general and continues with an overview of the various approaches and ideas that exist for the integration of the blockchain technology into the applications to increase overall security of the application or a whole scenario.}
 
 
 
@@ -18,7 +17,6 @@ Important: CHECK your bibtex entries
 	\item Background all together max 6 pages (2 pages each)
 	\item Related work max 6 pages per chapter
 	\item Conclusion: 2 pages --> Silas
-	\item Abstract --> Lenz
 \end{enumerate}
 
 
