--- a/Talk7/02_background/02-2_blockchain.tex
+++ b/Talk7/02_background/02-2_blockchain.tex
@@ -3,33 +3,30 @@
 
 Connected to the growing popularity of the Bitcoin Cryptocurrency that conquered the markets of the world, the interest for its underlying technology - the Blockchain - grew in a similar fashion. The idea of having a fully decentralized, tamper-proofed distributed online ledger, fascinated not only the digital world but also other non-digital areas. And while Bitcoin gained a bad reputation due to its fluctuation \cite{Shackelford2016}, the Blockchain, continued its triumphal procession up to a point where one might ask himself: Is the Blockchain a solution for existing problems or is the Blockchain the problem itself? \cite{Stinchcombe2017} \cite{Nielsen2018} \cite{Lunn2015}
 
-In the following subsections the Blockchain technology is going to be shortly  explained and discussed. It is not the goal of this section to give full technical insights into the various mechanisms, but to provide a good base of knowledge for the chapters to come.
+In the following subsections, the Blockchain technology is going to be shortly explained and discussed. It is not the goal of this section to give full technical insights into the various mechanisms but to provide a good base of knowledge for the chapters to come.
 
 \subsubsection{The Blockchain in Detail}
 The Blockchain is a shared, publicly available online ledger containing a chain of interlinked blocks, that themselves contain transactions between users. \cite{Wust2017}. No single user controls, updates or maintains the blockchain. Instead, every action performed on the blockchain is enforced a consensus amongst all users (nodes) \cite{Shackelford2016}. Because of the way its blocks are interlinked by a cryptographic hash, no changes can be made in the blockchain in hindsight without being traceable.
 
-The Blockchain is therefore a data structure that allows humans and computers to interact with each other, without having to rely upon trusted third parties. Instead, it is the controlling power of the data structure itself or put differently, the consensus amongst all users, that assures each parties compliance with their part of a deal. As a result, it allows "people who have no particular confidence in each other [to] collaborate without having to go through a neutral central authority" and becomes "a machine that creates trust" (\cite{Economist2015} as cited in \cite{Shackelford2016}).
+The Blockchain is, therefore, a data structure that allows humans and computers to interact with each other, without having to rely upon trusted third parties. Instead, it is the controlling power of the data structure itself or put differently, the consensus amongst all users, that assures each parties compliance with their part of a deal. As a result, it allows "people who have no particular confidence in each other [to] collaborate without having to go through a neutral central authority" and becomes "a machine that creates trust" (\cite{Economist2015} as cited in \cite{Shackelford2016}).
 \subsubsection{Properties of the Blockchain}
 In the following list, the most important properties are compiled \cite{Wust2017}.\begin{itemize}
   \item \textbf{Public verifiability}: The Blockchain has the significant advantage over other data structures that every observer can at all times verify that it is in a valid state and that all the changes made to its blocks are according to the protocol.
-  \item \textbf{Transparency \& Privacy}: Everyone with access to it can view the Blockchains transactions over time. However, the more transparent data is, the less private it becomes.
+  \item \textbf{Transparency \& Privacy}: Everyone with access to it can view the Blockchains transactions over time. However, the more transparent the data is, the less private it becomes.
   \item \textbf{Redundancy}: The Blockchain reduces the chances of losing data by its distributed nature itself. Each peer contains parts of the whole Blockchain locally. The chance that data gets lost is therefore extremely small.
-  \item \textbf{Anonymity}: The blockchain per se doesnt know users or real people. Instead it uses a public-private key-pair that binds every transaction to a specific public key. Commiting changes on the blockchain therefore leaves no link at all between a real person and his public key.
+  \item \textbf{Anonymity}: The blockchain per se doesn't know users or real people. Instead, it uses a public-private key-pair that binds every transaction to a specific public key. Committing changes on the blockchain, therefore, leaves no link at all between a real person and his public key.
 \end{itemize}
 
 \subsubsection{Common scenarios for usage}
-Due to the blockchains various properties, multiple use-cases emerged. Even though the below list is neither exhaustive nor its items disjunct, it shows the most common scenarios for the use of the Blockchain \cite{Wust2017}:
+Due to the blockchains various properties, multiple use-cases emerged. Even though the below list is neither exhaustive nor its items disjunct, it shows the most common scenarios for the use of the Blockchain\cite{Wust2017} that are not further discussed in this paper:
 \begin{itemize}
   \item Crypto Currencies: From the moment, when the paper by \citeauthor{Nakamoto2008} was published Blockchains and Crypto Currencies were interlinked. Because a Crypto Currency is per definition a digital asset, the Blockchain suites this use case particularly well.
   \item Supply Chain Management (SCM): In Supply Chain Management the flow of goods includes "various intermediate storage and production cycles" \cite{Wust2017} and the Blockchain is a good way to store and monitor all processes in a tamperproof manner.
   \item Payment and Money Transactions: Transactions between different banks and result in temporary debts between them. This issue can be solved using \textit{Distributed Ledger Technologies}, that make use of a Blockchain to settle debts. 
-  \item  Smart Contracts: "Smart contracts are digital contracts that are self-enforcing" and run on the Blockchain as a "distributed state machine" \cite{Wust2017}. More information can be found in the subsection \ref{subsec:02_smart_contracts}.
-  \item Decentralized Autonomous Organizations (DAO): "A DAO is an organization that is run autonomously through a set of smart contracts" \cite{Wust2017}. A DAO is therfore fundamentally dependent on the Blockchain, as it relies on decentralized governance of funds enforced by smart contracts.
+  \item Decentralized Autonomous Organizations (DAO): "A DAO is an organization that is run autonomously through a set of smart contracts" \cite{Wust2017}. A DAO is therefore fundamentally dependent on the Blockchain, as it relies on decentralized governance of funds enforced by smart contracts.
   \item Proof of Ownership: The idea of proofing intellectual property is one of the most straightforward use cases for the Blockchain. In this scenario, the user registers his or her property (e.g., image, text or another object like land) through the use of an identity function in the Blockchain. "While this does not fully prove ownership, it does provide evidence of ownership if no one else can show that the object was previously published" \cite{Wust2017}.   
-  \item E-Voting: Many desired properties connected to e-Voting are congruent with the Blockchains properties, others are not. Public verifiability stands in opposition to the need for privacy. This area is further explored in \ref{subsec:03_applications}.
-  \item IoT: The combination of Smart Contracts and the Internet of Things allows different devices to actually interact with each other and autonomously exchange information and goods. This topic is as well thoroughly discussed in the chapters \ref{subsec:03_applications} and \ref{subsec:03_IoT}.
 \end{itemize}
+The excluded use-cases \textbf{IoT}, \textbf{Smart Contracts} and \textbf{E-Voting} can be found under \ref{subsec:03_IoT}, \ref{subsec:02_smart_contracts} and \ref{subsec:03_applications_evoting}.
 
 \subsubsection{The Blockchain and Cybersecurity}
-In most cases, the Blockchain technology is used within applications of any sorts and kinds to make them more secure. More secure databases, transaction systems for banks, the replacement of certificate authorities or the security of critical physical infrastructures fall into this category. Another field of applications, uses the blockchain directly to mitigate cyber attacks. Examples herefore are the mitigation of DDoS Attacks or the handling of PKI related cyber threats. Applications that fall into the second category use the Blockchain more direct and immediate, while the first category uses them on a higher level, to help reducing the cybersecurity threats in the set up of the application itself.
-In this paper, both of those categories are discussed and explained.
+In most cases, the Blockchain technology is used within applications of any sorts and kinds to make them more secure. More secure databases, transaction systems for banks, the replacement of certificate authorities or the security of critical physical infrastructures fall into this category. Another field of applications uses the blockchain directly to mitigate cyber attacks. Examples, therefore, are the mitigation of DDoS Attacks or the handling of PKI related cyber threats. Applications that fall into the second category use the Blockchain more direct and immediate, while the first category uses them on a higher level, to help to reduce the cybersecurity threats in the set up of the application itself. In this paper, both of those categories are covered.
