replace unknown character

--- a/Talk7/03_related_work/03-5_applications.tex
+++ b/Talk7/03_related_work/03-5_applications.tex
@@ -23,7 +23,7 @@ To answer these questions we are going to make use of the below schema presented
 The ability to vote is the very foundation of every successful democracy and must be accessible for all eligible citizens. Most common systems today are paper-based voting systems that do not scale well and rely on the procedural security of officials conducting their jobs. And while various e-Voting systems exist, they all come with multiple security vulnerabilities, that lead to an enormous risk of election rigging and fraud.
 The Blockchain, on the other hand, offers a transparent and incorruptible database that doesn't have a single point of failure and cannot be controlled by a single entity. Meanwhile, new concerns arise, such as a lack of privacy and authentification issues.
 
-To date, several e-Voting systems exist, differing mostly in the amount of integration and the role of the Blockchain. An exhaustive overview can be found in \citetitle{BenAyed2017} \cite{BenAyed2017}.
+To date, several e-Voting systems exist, differing mostly in the amount of integration and the role of the Blockchain. An exhaustive overview can be found in  \cite{BenAyed2017}.
 
 Most existing systems such as Votebook \cite{Kirby2016} or Vote Watchers \cite{BlockchainTechnologiesCorporation} don't fully integrate the blockchain, but instead, use it as an underlying database system. Those systems rely on paper ballots. In these case, people have to authenticate by showing up at a real voting booth. Both examples use the Blockchain as a specific type of database, that is tamperproof and has the ability to create a history of all its entries. Additionally, the results of each booth can be aggregated with all other stations to generate a final result\cite{BenAyed2017}.
 According to \citeauthor{Osgood2016}, these systems follow the only "doable" approach, as they don't deny the fact, that voters have to identify themselves somewhere.
