missing comma in library.bib

--- a/Talk7/library.bib
+++ b/Talk7/library.bib
@@ -18,7 +18,7 @@ urldate = {2019-04-15}
 @article{Kirby2016,
 author = {Kirby, Kevin and Masi, Anthony and Maymi, Fernando},
 pages = {14},
-publisher = {The Economist}
+publisher = {The Economist},
 title = {{Votebook: A proposal for a blockchain-based electronic voting system}},
 year = {2016}
 }
