fix nakamoto and schaub references

--- a/Talk7/03_related_work/03-2_pki_ksi.tex
+++ b/Talk7/03_related_work/03-2_pki_ksi.tex
@@ -18,7 +18,7 @@ A PKI certificate verifies that the given name-value (e.g., domain name and publ
 
 The procedures of PKI management as employed in HTTPS/TLS, as well as many other systems and private infrastructures, are standardized by the Internet Engineering Task Force (IETF) in the X.509 standard \cite{adams_internet_2015}.
 
-Contrary to the centralized approach, the Pretty Good Privacy (PGP) architecture is based on a decentralized web-of-trust where all participants manually define their trust anchors (i.e., which entities to trust as the anchor for a certificate chain) instead of relying on a predefined trust store as included in operating systems or browsers \cite{Straub2006}. While PGP is in relatively broad use for secured email communication, this work focuses mainly on centralized infrastructures for their approachability with blockchain architectures.
+Contrary to the centralized approach, the Pretty Good Privacy (PGP) architecture is based on a decentralized web-of-trust where all participants manually define their trust anchors (i.e., which entities to trust as the anchor for a certificate chain) instead of relying on a predefined trust store as included in operating systems or browsers \cite{straub_tobias_usability_2006}. While PGP is in relatively broad use for secured email communication, this work focuses mainly on centralized infrastructures for their approachability with blockchain architectures.
 
 
 \subsubsection{Threat Model for Public Key Infrastructures}
