Cybersecurity next adjustments

--- a/Talk7/02_background/02-1_cybersecurity.tex
+++ b/Talk7/02_background/02-1_cybersecurity.tex
@@ -3,6 +3,11 @@
 
 Cybersecurity has the potential to be one of the most global interests for governmental or private institutions, as well as for individuals. Political, financial, corporate, military and medical organizations collect an enormous amount of data on computers and other devices. All those organizations need to make sure that no unauthorized individuals or organizations can access, modify or remove this sensitive information. When the media publishes that an unauthorized person has attacked a company, they suddenly loose reputation by their customers, which probably leads to losing many customers. All in all, the business result of an attacked institution decreases very largely. Therefore, an investment in purposes for cybersecurity is very significant \cite{Bishop2003}.
 
+Enemies of IT security are either human users (social engineering or insufficient security knowledge), the complexity of the software and the speed or time pressure to bring software to the market \cite{Bishop2003}. Generally, the is no optimal solution for security, as every system will be subject to some attacks \cite{Bishop2003}.
+
+% something about cryptography
+Various fields characterized the history of cybersecurity such as cryptography which was used by military and diplomacy before World War 2 \cite{Bishop2003}. Multiple cryptosystems evolved, such as the Enigma machine, which helped the Allies to decipher German radio transmissions \cite{Kahn1991}.
+
 \subsubsection{CIA Triangle}
 Data, software, and hardware all over the world need to be protected in such a way that confidentiality, integrity, and availability could be guaranteed \cite{Pfleeger2014}. Those three security objectives are considered the most important components of security and are modeled into the rear triangle, also called the CIA-triangle. By combining these three aspects, a computer will become valuable for a user. However, there are three possible ways to harm this value by breaching one of the following components, as seen in \cite{Bishop2004}.
 \begin{itemize}
@@ -11,34 +16,30 @@ Data, software, and hardware all over the world need to be protected in such a w
   \item \textbf{Integrity:} The trustworthiness of resources or data and the prevention of unauthorized or unwanted changes is the base of this component. It usually includes data integrity (the information' content) and origin integrity (source of data). Mechanisms of integrity may be either prevented or detected. A prevention mechanism blocks any unauthorized try to modify data. Detection mechanisms on the other side do not even try to prevent violations of integrity. They report that the underlying integrity is no longer guaranteed. As the source and the trust of data usually relies on assumptions, evaluating the integrity of data is often difficult.
         \subitem Definition: An asset is \textbf{modified} only by authorized users. E.g., a thief gains access to data and modifies its content.
   \item \textbf{Availability:} When desired, a user may use a resource or information at any time. An unavailable system is as useful as having no such system. By guaranteeing a running system, those resources may be utilized to generate revenue for a company or to gain information out of data. Denial of services attacks (DoS) are efforts to block the availability of a system and are difficult to detect because unusual access patterns have to be detected. In section \ref{subsec:03_ddos} those types of attacks are further described.
-        \subitem:  Definition: Any authorized party may \textbf{use} an asset. E.g., a thief steals a computer, and the user has no longer access.
+        \subitem Definition: Any authorized party may \textbf{use} an asset. E.g., a thief steals a computer, and the user has no longer access.
 \end{itemize}
 
-Access control is a paradigm of computer security to implement a policy which controls accesses by users to protected objects \cite{Pfleeger2014}.
-% TODO probably more access control
-
-
 \subsubsection{Attack possibilites}
-The main goal of computer security is to protect valuable assets, such as hardware, software, and data. A threat is a potential violation of having security within a system.
-% TODO extend attack possibilities
-
+The main goal of computer security is to protect valuable assets, such as hardware, software, and data. A threat is a potential violation of having security within a system. As there are many possibilities to attack a computer system which could be categorized to either direct attacks (sometimes technically difficult to mount) or indirect attacks (e.g., social engineering attacks) \cite{Bishop2003}. Typical examples include the following: Hoaxes, Bugs, Trojan horses,  worm, virus, rootkit or bots.
 
 \subsubsection{Terminology}
 In most literature, the terms cybersecurity and information security are used interchangeably \cite{VonSolms2013}.
 
-Security is hard to define as no universally agreed definition exists. A possible definition of security may be the state in which there is no relevant threat or security breach. As it is not possible to enumerate all possible threats or to verify their nonexistence, security cannot be measured in a meaningful way. Security, in general, is very individual depending on the person and her willingness to take risks, which can be perceived differently by other people. All in all, security refers to protection against \textbf{intended} incidents and attacks \cite{Bishop2004, Pfleeger2014}.
+It is starting with security in general. Security is hard to define as no universally agreed definition exists. A possible definition of security may be the state in which there is no relevant threat or security breach. As it is not possible to enumerate all possible threats or to verify their nonexistence, security cannot be measured in a meaningful way. Security, in general, is very individual depending on the person and her willingness to take risks, which can be perceived differently by other people. All in all, security refers to protection against \textbf{intended} incidents and attacks \cite{Bishop2004, Pfleeger2014}.
 
 Additionally, security has to be disassociated from the term safety, where the latter refers to \textbf{unintended} incidents and attacks \cite{Bishop2004}.
 
-The terminology of "Computer Security", "Information Security" and "IT Security" have been used interchangeably over many years. Going with time, the term "Cyber Security" became more popular, when the former US President Barack Obama proclaimed in 2009, as stated in \cite{TheWhiteHouse2009}, "I call upon the people of the United States to recognize the importance of cybersecurity and to observe this month with appropriate activities, events, and training to enhance our national security and resilience". In \ref{cybersec_google_trends} the google search results of cybersecurity-related terms are compared over a progression of time.
+The terminology of "Computer Security", "Information Security" and "IT Security" have been used interchangeably over many years. Going with time, the term "Cyber Security" became more popular, when the former US President Barack Obama proclaimed in 2009, as stated in \cite{TheWhiteHouse2009}, "I call upon the people of the United States to recognize the importance of cybersecurity and to observe this month with appropriate activities, events, and training to enhance our national security and resilience".
 
-\begin{figure}[ht]
-  \begin{center}
-    \includegraphics[scale=0.4]{Talk7/img/google_trends}
-  \end{center}
-  \caption{Google Trends for security term between 2006 - 2019}
-  \label{cybersec_google_trends}
-\end{figure}
+%In \ref{cybersec_google_trends} the google search results of cybersecurity-related terms are compared over a progression of time.
+
+%\begin{figure}[ht]
+%  \begin{center}
+%    \includegraphics[scale=0.4]{Talk7/img/google_trends}
+%  \end{center}
+%  \caption{Google Trends for security term between 2006 - 2019}
+%  \label{cybersec_google_trends}
+%\end{figure}
 
 
 
