Attempt to fix citations

--- a/Talk7/library.bib
+++ b/Talk7/library.bib
@@ -1,3 +1,21 @@
+@article{Shackelford2016,
+archivePrefix = {arXiv},
+arxivId = {arXiv:1011.1669v3},
+author = {Shackelford, Scott and Myers, Steven},
+doi = {10.2139/ssrn.2874090},
+eprint = {arXiv:1011.1669v3},
+file = {:Users/lenzbaumann/Library/Application Support/Mendeley Desktop/Downloaded/Shackelford, Myers - 2016 - Block-by-Block Leveraging the Power of Blockchain Technology to Build Trust and Promote Cyber Peace.pdf:pdf},
+isbn = {0674539265},
+issn = {1556-5068},
+journal = {Yale Journal of Law and Technology (2017 Forthcoming)},
+keywords = {Bitcoin,blockchain,cyber attack,cyber peace,cybersecurity,polycentric governance},
+mendeley-groups = {ComSys Seminar},
+pages = {16--85},
+pmid = {21675331},
+title = {{Block-by-Block: Leveraging the Power of Blockchain Technology to Build Trust and Promote Cyber Peace}},
+volume = {Kelley Sch},
+year = {2016}
+}
 @book{Pfleeger2014,
 author = {Pfleeger, Charles P. and Pfleeger, Shari Lawrence and Margulies, Jonathan},
 file = {:Users/pascalzehnder/Dropbox/UZH/19{\_}FS/Comsys/General Cyber Security/Pfleeger, Pfleeger, Margulies - 2014 - Security in Computing.pdf:pdf},
