--- a/Talk7/MyHeader.tex
+++ b/Talk7/MyHeader.tex
@@ -1,4 +1,5 @@
 \usepackage[numbers]{natbib}
+\PassOptionsToPackage{square,numbers}{natbib}
 \usepackage{listings, xcolor}
 
 \definecolor{verylightgray}{rgb}{.97,.97,.97}
