remove unknown character

--- a/Talk7/library.bib
+++ b/Talk7/library.bib
@@ -244,7 +244,7 @@ isbn = {978-1-5386-5008-0},
 issn = {2169141X 21691401},
 journal = {2018 IEEE International Conference on Cloud Engineering (IC2E)},
 pages = {378--384},
-title = {{BlockCIS—A Blockchain-Based Cyber Insurance System}},
+title = {{BlockCIS A Blockchain-Based Cyber Insurance System}},
 url = {https://ieeexplore.ieee.org/document/8360357/},
 year = {2018}
 }
