--- a/Talk7/02_background/02-2_blockchain.tex
+++ b/Talk7/02_background/02-2_blockchain.tex
@@ -20,7 +20,7 @@ In the following list, the most important properties are compiled \cite{Wust2017
 \subsubsection{Common scenarios for usage}
 Due to the blockchains various properties, multiple use-cases emerged. Even though the below list is neither exhaustive nor its items disjunct, it shows the most common scenarios for the use of the Blockchain\cite{Wust2017} that are not further discussed in this paper:
 \begin{itemize}
-  \item Crypto Currencies: From the moment, when the paper by \citeauthor{Nakamoto2009} was published Blockchains and Crypto Currencies were interlinked. Because a Crypto Currency is per definition a digital asset, the Blockchain suites this use case particularly well.
+  \item Crypto Currencies: From the moment, when the paper by Satoshi Nakamoto (\cite{Nakamoto2009}) was published Blockchains and Crypto Currencies were interlinked. Because a Crypto Currency is per definition a digital asset, the Blockchain suites this use case particularly well.
   \item Supply Chain Management (SCM): In Supply Chain Management the flow of goods includes "various intermediate storage and production cycles" \cite{Wust2017} and the Blockchain is a good way to store and monitor all processes in a tamperproof manner.
   \item Payment and Money Transactions: Transactions between different banks and result in temporary debts between them. This issue can be solved using \textit{Distributed Ledger Technologies}, that make use of a Blockchain to settle debts. 
   \item Decentralized Autonomous Organizations (DAO): "A DAO is an organization that is run autonomously through a set of smart contracts" \cite{Wust2017}. A DAO is therefore fundamentally dependent on the Blockchain, as it relies on decentralized governance of funds enforced by smart contracts.
