--- a/Talk7/03_related_work/03-5_applications.tex
+++ b/Talk7/03_related_work/03-5_applications.tex
@@ -9,7 +9,7 @@ Below we want to introduce different scenarios of applications for the Blockchai
     \item How does the application make use of Blockchain Technology?
     \item Is the Blockchain really needed or could the problems be solved without it?
 \end{itemize}
-To answer these questions we are going to make use of the below schema presented by \citeauthor{Wust2017}, that helps to decide when to use a blockchain and when not.
+To answer these questions we are going to make use of the below schema presented by \cite{Wust2017}, that helps to decide when to use a blockchain and when not.
 \begin{figure}[ht!]
     \begin{center}
         \includegraphics[scale=0.6]{Talk7/img/app/BCorNot}
@@ -26,13 +26,13 @@ The Blockchain, on the other hand, offers a transparent and incorruptible databa
 To date, several e-Voting systems exist, differing mostly in the amount of integration and the role of the Blockchain. An exhaustive overview can be found in  \cite{BenAyed2017}.
 
 Most existing systems such as Votebook \cite{Kirby2016} or Vote Watchers \cite{BlockchainTechnologiesCorporation} don't fully integrate the blockchain, but instead, use it as an underlying database system. Those systems rely on paper ballots. In these case, people have to authenticate by showing up at a real voting booth. Both examples use the Blockchain as a specific type of database, that is tamperproof and has the ability to create a history of all its entries. Additionally, the results of each booth can be aggregated with all other stations to generate a final result\cite{BenAyed2017}.
-According to \citeauthor{Osgood2016}, these systems follow the only "doable" approach, as they don't deny the fact, that voters have to identify themselves somewhere.
+According to \cite{Osgood2016}, these systems follow the only "doable" approach, as they don't deny the fact, that voters have to identify themselves somewhere.
 
-Follow my Vote \cite{FollowMyVote} follows a fundamentally different approach: It fully integrates the blockchain and uses its ability to act as a distributed ledger. Each voter installs a local "Voting Box" on his computer, requests ballots online and votes directly from within the application. The authentification process is done via the organization that holds the election by uploading official documents also from within the application. Nevertheless, according to \citeauthor{Osgood2016}, this idea is fundamentally flawed as authentication mechanisms are still an issue and the technique could scare off remote voters.
+Follow my Vote \cite{FollowMyVote} follows a fundamentally different approach: It fully integrates the blockchain and uses its ability to act as a distributed ledger. Each voter installs a local "Voting Box" on his computer, requests ballots online and votes directly from within the application. The authentification process is done via the organization that holds the election by uploading official documents also from within the application. Nevertheless, according to \cite{Osgood2016}, this idea is fundamentally flawed as authentication mechanisms are still an issue and the technique could scare off remote voters.
 
 Within the three proposed systems, two fundamental questions seem to remain unanswered:
 \begin{enumerate}
-    \item \textbf{Authenticating users and the existence of a trusted third party}: To authenticate the voters, an organization, that has all the necessary data is inevitable. In most cases, this leaves only the government as an option. However, according to the diagram by \citeauthor{Wust2017} the use of Blockchain technology only makes sense if no trusted third party exists. This causes a dilemma: If the non-existing trust in the government is the justification for the use of the Blockchain, the question arises whether the government can be trusted regarding the authentication of the voters. Even though a systematic rigging is harder to achieve with this approach, the problem remains at hand.
+    \item \textbf{Authenticating users and the existence of a trusted third party}: To authenticate the voters, an organization, that has all the necessary data is inevitable. In most cases, this leaves only the government as an option. However, according to the diagram by \cite{Wust2017} the use of Blockchain technology only makes sense if no trusted third party exists. This causes a dilemma: If the non-existing trust in the government is the justification for the use of the Blockchain, the question arises whether the government can be trusted regarding the authentication of the voters. Even though a systematic rigging is harder to achieve with this approach, the problem remains at hand.
     \item \textbf{The user as a single point of failure}: While the Blockchain does seem to be perfect for voting situations, it still leaves the most important point of failure unprotected: The user himself. Even the most tamper-proofed, blockchain-based voting system does not prevent hackers from a compromising an end-device.
 \end{enumerate}
 
@@ -44,22 +44,22 @@ The Blockchain can be a solution if the question of authentification can be answ
 \subsubsection{Autonomous Vehicles, Smart Cities \& IoT}
 Smart vehicles are increasingly connected to surrounding infrastructure via the Internet, thus making them part of the IoT. This development brings apparent advantages, but also many challenges, especially in the area of cybersecurity. Malicious attacks on a vehicle endanger not only the vehicles data and passengers but also other road users. Traditional approaches meanwhile tend to be ineffective due to centralization, unscalability, and unsecured communication architectures \cite{DorriSteger2017}. Because the blockchain offers solutions to many of these problems, various approaches exist to connect self-driving vehicles with a blockchain-based architecture.
 
-\citeauthor{DorriSteger2017} propose a smart vehicle ecosystem based on a blockchain architecture. It consists of clusters of nodes which are connected to the system via Overlay Block Managers (OBMs). Each vehicle is connected to an overlay of various OBMs that form the blockchain overlay. All Transactions are broadcast to and verified by the OBMs.
+\cite{DorriSteger2017} propose a smart vehicle ecosystem based on a blockchain architecture. It consists of clusters of nodes which are connected to the system via Overlay Block Managers (OBMs). Each vehicle is connected to an overlay of various OBMs that form the blockchain overlay. All Transactions are broadcast to and verified by the OBMs.
 To ensure the user's privacy, each vehicle is equipped with internal vehicle storage to store sensitive data. Each owner can decide which data is provided to third parties and which data is not.
 To make specific public keys identifiable in the real world, a trusted third party is involved, and a centralized mechanism is used. This is needed in the case of service centers and software providers. The ecosystem makes remote software updates, vehicle insurance, smart charging, and vehicle sharing possible.
 
-Also on a large scale, but slightly different is the hierarchical system proposed by \citeauthor{Sharma2017}. Two trusted third parties that register the vehicles (e.g., Department of Motor Vehicles) and that categorize the vehicles into minor nodes and ordinary nodes (Revocation Authority) exist at the very top. At the same level, the blockchain overlay is constituted by controller nodes, that hold the information of the vehicle network. The lower layer consists of minor nodes. These are selected vehicles that store data generated by sensors and applications. 
+Also on a large scale, but slightly different is the hierarchical system proposed by \cite{Sharma2017}. Two trusted third parties that register the vehicles (e.g., Department of Motor Vehicles) and that categorize the vehicles into minor nodes and ordinary nodes (Revocation Authority) exist at the very top. At the same level, the blockchain overlay is constituted by controller nodes, that hold the information of the vehicle network. The lower layer consists of minor nodes. These are selected vehicles that store data generated by sensors and applications. 
 The hierarchy between the higher-order nodes and the lower-order nodes, allows to set different rights for different levels of the overlay: The system nodes e.g. are allowed to make specific data requests to the miner nodes, to gather information from sensors, while the miner nodes are only allowed to get general information from the higher-order nodes.
 
-The paper by \citeauthor{Rowan2017} looks at the problem from a different angle: It focusses on the communication between two road members through side-channels such as visible light and acoustic signals. To solve the problem of the limited data throughput while trying to securely validate the other communication partner, centralized approaches were discarded due to the high number of existing manufacturers and standards. Instead, a blockchain based domain name system is proposed.
+The paper by \cite{Rowan2017} looks at the problem from a different angle: It focusses on the communication between two road members through side-channels such as visible light and acoustic signals. To solve the problem of the limited data throughput while trying to securely validate the other communication partner, centralized approaches were discarded due to the high number of existing manufacturers and standards. Instead, a blockchain based domain name system is proposed.
 When two vehicles meet, their communication needs to be extremely fast and work in the absence of any internet connection or any centralized infrastructure. 
 To make this possible, Blockchain is used as a way to replace the need for a central authority when authenticating another vehicle. By creating a decentralized Name Service that binds the license plate value and identity together with a certificate, it is able to create a good base for a secure session between two vehicles.
 
 In the presented ideas, the blockchain has different roles. And while the approach by \cite{Rowan2017} uses it as a replacement for a domain name service, the approaches by \cite{DorriSteger2017} and \cite{Sharma2017} think further and propose actual ecosystems including other IoT devices in the use case of a smart city.
 The thought of having multiple layers of nodes that, even though all incorporate the blockchain, have different rights to write and access the blockchain, seems very promising and suits well to the hierarchical structures that are necessary to organize a smart city network. In some way, it can be thought of a system of checks and balances where some nodes have more rights, but their actions can always be seen and verified from everywhere at any time.
 
-Applying the flow-chart by \citeauthor{Wust2017}, we identify the main issue again in the existence of a trusted third party. Whether it exists explicitly such as in the systems of \cite{Sharma2017} or implicitly such as in the case of \cite{Rowan2017} or \cite{DorriSteger2017}, in all three scenarios we have a third party that comes into play. 
-\citeauthor{Wust2017} this can only lead to two possible outcomes: Either, the use of the blockchain is not necessary or a private permissioned blockchain should be chosen \cite{Wust2017}, reducing the blockchain to a decentral database system.
+Applying the flow-chart by \cite{Wust2017}, we identify the main issue again in the existence of a trusted third party. Whether it exists explicitly such as in the systems of \cite{Sharma2017} or implicitly such as in the case of \cite{Rowan2017} or \cite{DorriSteger2017}, in all three scenarios we have a third party that comes into play. 
+\cite{Wust2017} this can only lead to two possible outcomes: Either, the use of the blockchain is not necessary or a private permissioned blockchain should be chosen \cite{Wust2017}, reducing the blockchain to a decentral database system.
 Nevertheless, the IoT setting fits the blockchain particularly well, because the data generated by sensors can be incorporated right away without any trusted third parties. The fact that they exist on a different level, does not invalidate the advantages of the blockchain in this case.
 
 \subsubsection{Personal Data Protection and Sharing in the medical sector}
@@ -68,15 +68,15 @@ As an additional and particularly compelling aspect, the combination of IoT devi
 
 In the health-care sector three traditional models exist to deal with the facility of interoperability of medical data \cite{Kshetri2017}: The push model, where medical information is sent from one provider to another, the pull model, where one provider asks another provider for information and the view model, where one provider looks at another providers record.
 A major drawback to all of these models is that the data is not audited or tracked in a standardized way. For example, if a patient is transferred to a different hospital, the new hospital may not be able to access data that was not "pushed." This means that there is no guarantee that the data's integrity is maintained over time.
-It is argued by \citeauthor{Kshetri2017} that the blockchain offers a fourth model, which makes it possible to share medical records securely across providers without having the need to include a trusted third party into the process. It leaves the data owner in full control about what is shared and leaves a verifiable audit trail of the data behind. \cite{Kshetri2017}
+It is argued by \cite{Kshetri2017} that the blockchain offers a fourth model, which makes it possible to share medical records securely across providers without having the need to include a trusted third party into the process. It leaves the data owner in full control about what is shared and leaves a verifiable audit trail of the data behind. \cite{Kshetri2017}
 
-The MedRec system by \citeauthor{Azaria2016} is a blockchain-based, network to share and protect clinical data. Via smart contracts on an Ethereum blockchain, it logs patient-provider relationships, that associate a medical record with viewing permissions, and data retrieval instructions for the execution on external databases.
+The MedRec system by \cite{Azaria2016} is a blockchain-based, network to share and protect clinical data. Via smart contracts on an Ethereum blockchain, it logs patient-provider relationships, that associate a medical record with viewing permissions, and data retrieval instructions for the execution on external databases.
 The systems nodes consist of providers, that require a full server and database infrastructure, and patients, that can use any mobile device or web-interface and use only a local database with their own data.
 Providers can add new records associated with a particular patient and patients can authorize the sharing of records between providers. The involved parties are notified by automated notifications when changes occur or new data is added. To avoid unintended or abusive use of data, different policies are put in place by the owner and carried out by smart contracts
 To create incentives to run a blockchain node, MedRec offers block rewards and anonymized patient data.
 
-\citeauthor{Cao2019} focus on a different aspect and point out, that existing schemes cannot ensure the correctness and integrity of outsourced medical records. 
-To address these problems, \citeauthor{Cao2019} propose a secure cloud-based system that runs without introducing any trusted third party, in the following way:
+\cite{Cao2019} focus on a different aspect and point out, that existing schemes cannot ensure the correctness and integrity of outsourced medical records. 
+To address these problems, \cite{Cao2019} propose a secure cloud-based system that runs without introducing any trusted third party, in the following way:
  Each patient makes an appointment with the hospital and obtains a treatment key for diagnosis. With the treatment key, a secure channel between patient, hospital and the doctors is established. 
 The patient generates warrants to delegate to doctors, that indicate the identities of the treating doctors for specific treatment time and the needed auxiliary medical information.\cite{Cao2019}
 During the treatment time, doctors generate medical records for the patient and store them on the blockchain.\cite{Cao2019}
@@ -89,7 +89,7 @@ The question whether such a system must be run on the blockchain can therefore n
 
 The whole field of IoT devices also includes the field of Wireless Body Area Networks (WBANs). In a WBAN a patient is equipped with one or multiple wearables or implanted medical devices, that take real-time measurements of vital indicators, such as heart rate or glucose levels. All devices report to a master device that collects and aggregates the data and offers a user-friendly interface.
 
-To address the security concerns connected to such a setup, \citeauthor{Baccarini2018} propose integrating WBAN systems with smart contracts on a consortium-managed blockchain, creating an immutable log of the transactions between WBAN devices and the health care providers. \cite{Baccarini2018} 
+To address the security concerns connected to such a setup, \cite{Baccarini2018} propose integrating WBAN systems with smart contracts on a consortium-managed blockchain, creating an immutable log of the transactions between WBAN devices and the health care providers. \cite{Baccarini2018} 
 In the presented system, the data of all devices gets collected and aggregated on a master device (e.g. smartphone) and is then, together with customized threshold variables, sent to a specific smart contract on the blockchain. The smart contract evaluates the data and issues alerts to both patient and healthcare provider, as well as automated treatment instructions to the actuator nodes, if necessary.
 That way, no medical information is stored on the blockchain or in the smart contract. Instead, only the success (or failure) of the transactions gets stored. The data itself is forwarded to a designated storage database.
 To authenticate the data later, the blockchains transactions can be linked to the storage base where the patient's medical history lies.
