Add filler texts and fix background chapters missing

--- a/Talk7/01_introduction/01_introduction.tex
+++ b/Talk7/01_introduction/01_introduction.tex
@@ -2,7 +2,7 @@
 
 Since the initial development of computing and communication systems, their security has been an ever-growing concern. More and more data is being collected and shared between entities and third-parties. Protecting this data and the underlying systems is of utmost importance for our modern internet-based economy. Especially companies are bound by increasingly strict laws and need their customer base to be confident in data privacy to be able to survive.
 
-The evolution of blockchain systems over the past decade has led to research on a broad range of application areas in computer science as well as in other contexts. Amongst many others, the applications of blockchain technologies for the purposes of securing systems and data has been an area of very recent research. The primary goal of this work is, therefore, to provide an overview of the key areas where such technologies could be applied in future systems, as well as to build an intuition for where it would not be a valuable solution.
+The evolution of blockchain systems over the past decade has led to research on a broad range of application areas in computer science as well as other contexts. Amongst many others, the applications of blockchain technologies for the purposes of securing systems and data has been an area of very recent research. The primary goal of this work is, therefore, to provide an overview of the key areas where such technologies could be applied in future systems, as well as to build an intuition for where it would not provide a valuable solution.
 
 To establish a solid foundation, section \ref{sec:02_background} first provides a summary of the most important basic concepts and technical background. More specifically, section \ref{subsec:02_cybersecurity} shortly goes into the traditional concepts of cybersecurity and the main threat models that have been developed in the area (e.g., the CIA triangle). Section \ref{subsec:02_blockchain} then presents the basics of blockchain on the example of Bitcoin, while section \ref{subsec:02_smart_contracts} summarizes the concept of smart contracts, an evolution based on the core infrastructure of the blockchain.
 
