--- a/Talk7/03_related_work/03_related_work.tex
+++ b/Talk7/03_related_work/03_related_work.tex
@@ -1,16 +1,11 @@
 \section{Related Work}
+\label{sec:03_related_work}
 
-\begin{itemize}
-  \item provide an overview of the section structure and contents (filler)
-\end{itemize}
+Having built the theoretical foundation in section \ref{sec:02_background}, we now focus on the main research question of this work and summarize recent research in the intersection of blockchain and cybersecurity. The subsequent sections can broadly be separated into a low-level, more technical part (sections \ref{subsec:03_ddos} and \ref{subsec:03_pki}), and a high-level, more application-oriented part (sections \ref{subsec:03_IoT} and \ref{subsec:03_applications}).
+
+Section \ref{subsec:03_ddos} first presents some of the possible blockchain-based solutions that have been developed as a countermeasure to DDoS attacks, alongside a comparison to currently existing countermeasures and the potential motivations for attackers in a DDoS context. Subsequently, section \ref{subsec:03_pki} goes into the potential application of blockchain to rebuild a key part of the internet security infrastructure, specifically the current idea of PKI's. On a higher level, section \ref{subsec:03_IoT} then presents some of the critical issues in securing IoT devices, as well as how they could be approached with blockchain technologies. Finally, \ref{subsec:03_applications} summarizes the currently productive applications of the blockchain in a broad cybersecurity context, as well as some other application areas that are still part of current research.
 
 \input{Talk7/03_related_work/03-1_ddos}
 \input{Talk7/03_related_work/03-2_pki_ksi}
 \input{Talk7/03_related_work/03-4_iot}
 \input{Talk7/03_related_work/03-5_applications}
-
-%\begin{itemize}
-%  \item \textbf{End of section 3}
-%  \item shortly summarize the section
-%  \item introduce the upcoming content (filler)
-%\end{itemize}
