Small intro change

--- a/Talk7/01_introduction/01_introduction.tex
+++ b/Talk7/01_introduction/01_introduction.tex
@@ -1,6 +1,6 @@
 \section{Introduction}
 
-Since the initial development of computing and communication systems, their security has been an ever-growing concern. More and more data is being collected and shared between entities and third-parties. Protecting this data and the underlying systems is of utmost importance for our modern internet-based economy. Especially companies are bound by increasingly strict laws and need their customer base to be confident in data privacy to be able to survive.
+Since the initial development of computing and communication systems, their security has been an ever-growing concern. More and more data is being collected and shared between entities and third-parties. Protecting this data and the underlying systems is of utmost importance in our modern internet-based economy: companies are bound by increasingly strict laws and need their customer base to be confident in data privacy to be able to survive.
 
 The evolution of blockchain systems over the past decade has led to research on a broad range of application areas in computer science as well as other contexts. Amongst many others, the applications of blockchain technologies for the purposes of securing systems and data has been an area of very recent research. The primary goal of this work is, therefore, to provide an overview of the key areas where such technologies could be applied in future systems, as well as to build an intuition for where it would not provide a valuable solution.
 
